--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^1.2.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.35",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/pug": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/scope-manager": "^5.15.0",
+    "@typescript-eslint/type-utils": "^5.15.0",
+    "@typescript-eslint/types": "^5.15.0",
+    "@typescript-eslint/utils": "^5.15.0",
+    "@typescript-eslint/visitor-keys": "^5.15.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.4.0",
+    "eslint-scope": "^7.1.1",
+    "eslint-utils": "^3.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.46.2",
